--- a/styles/editor.less
+++ b/styles/editor.less
@@ -1,41 +1,59 @@
-@import 'colors';
+@import "colors";
 
 .editor {
-  height: 100%;
+  height: calc(100% - 140px);
+  color: var(--mode-text-color);
 
   .editor-box {
-    height: calc(100% - 80px);
-  }
+    height: 100%;
 
-  .tabs {
-    margin: 8px;
+    & > .ace_editor {
+      background-color: var(--primary-bg-color);
+      height: 100%;
+      border-radius: 10px;
+
+      & > .ace_gutter {
+        background-color: var(--secondary-bg-color);
+      }
+    }
   }
 
   .title {
-    background-color: var(--editor-title-background);
-    border-bottom: 1px solid var(--darker-base-color);
+    background-color: var(--primary-bg-color);
     color: var(--mode-text-color);
     display: flex;
     padding: 3px 8px;
+    align-items: center;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    box-shadow: 0.1rem 0.1rem 0.2rem 0 var(--box-shadow);
 
     b {
-      background-color: var(--navigation-background);
-      border: 1px solid var(--darker-base-color);
-      border-bottom-left-radius: 4px;
-      border-right: 0;
-      border-top-left-radius: 4px;
       color: var(--base-text-color);
       display: block;
       font-size: 120%;
-      margin-bottom: 9px;
-      margin-top: 8px;
+      height: 100%;
+      margin-bottom: 8px;
+      margin-top: 10px;
       padding: 8px;
-      padding-top: 14px;
     }
 
     .select-hotkeys {
       flex-grow: 1;
-      margin: 8px 8px 8px 0;
+
+      & > div > div {
+        border-radius: 7px;
+        border: none;
+        background-color: var(--secondary-bg-color);
+      }
+
+      & #react-select-2-listbox > div > div {
+        background-color: var(--secondary-bg-color) !important;
+
+        &:hover {
+          background-color: var(--input-focus-visible) !important;
+        }
+      }
     }
 
     .toggle-configuration {
@@ -43,21 +61,25 @@
     }
 
     input.text-input {
-      background: var(--input-background-color);
-      color: var(--mode-text-color);
-      border: 1px solid var(--darker-base-color);
-      border-bottom-right-radius: 4px;
-      border-top-right-radius: 4px;
+      background: var(--secondary-bg-color);
+      color: var(--mode-text);
+      border-radius: 7px;
       flex-grow: 3;
       font-size: 110%;
       margin: 8px 8px 9px 0;
       padding: 8px;
+      border: none;
+
+      &:focus-visible {
+        outline: none;
+        background-color: var(--input-focus-visible);
+      }
     }
   }
 
   .variable-box {
     label::before {
-      content: '$';
+      content: "$";
     }
   }
 }
