--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -10,7 +10,7 @@
   margin: 0;
   padding: 10px;
   border-radius: 10px;
-  background-color: var(--primary-bg-color);
+  background-color: var(--box-background);
   margin-bottom: 10px;
   box-shadow: 0.1rem 0.1rem 0.2rem 0 var(--box-shadow);
 }
@@ -22,7 +22,7 @@
 }
 
 .tabs__labels li a {
-  color: var(--mode-text-color);
+  color: var(--content-text-color);
   display: block;
   outline: none;
   padding: 10px 15px;
@@ -44,7 +44,7 @@
 }
 
 .tabs__labels li .link {
-  color: var(--base-link-color);
+  color: var(--link-color);
 }
 
 .tabs__labels li .link::before {
@@ -57,7 +57,7 @@
   border-radius: 13px;
   margin-bottom: 10px;
   padding: 10px;
-  background-color: var(--primary-bg-color);
+  background-color: var(--box-background);
   box-shadow: 0.1rem 0.1rem 0.2rem 0 var(--box-shadow);
 }
 
