--- a/styles/table.less
+++ b/styles/table.less
@@ -20,9 +20,9 @@ th {
 } */
 
 .row-error {
-  color: var(--danger-color);
+  color: var(--error-text-color);
 }
 
 .row-warn {
-  color: var(--warning-color);
+  color: var(--warning-text-color);
 }
