style: update the popup page layout

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -121,7 +121,7 @@ LIGHT MODE THEME
   --navigation-search-text-color: #ccc;
   --popup-search-background-color: #f3f5f7;
   --popup-search-focus-visible: #e5e7e9;
-  --popup-search-text-color: #ccc;
+  --popup-search-text-color: @light-text-color;
 
   /* Editor */
   --editor-title-background: #0a0c1b;
