style: allow text to be wrapped in the container

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -58,6 +58,7 @@
   padding: 10px;
   background-color: var(--box-background);
   box-shadow: 0.1rem 0.1rem 0.2rem 0 var(--box-shadow);
+  overflow-wrap: break-word;
 }
 
 .tabs__content {
